<resources>
    <!-- TBA - this will change. -->
    <string name="app_name">RaceDay Two</string>

    <!-- Fragment titles. -->
    <string name="meeting_fragment_name">Meetings</string>
    <string name="races_fragment_name">Races</string>
    <string name="runners_fragment_name">Runners</string>
    <string name="summary_fragment_name">Summary</string>
    <string name="settings_fragment_name">Settings</string>

    <!-- Base url. -->
    <string name="base_url">https://tatts.com/pagedata/racing/</string>

    <!-- Main page file name.-->
    <string name="main_page">RaceDay.xml</string>

    <!-- XPath parse paths. -->
    <string name="meetings_races_parse_path">/RaceDay/Meeting|//Race</string>
    <!-- This works, but only gets the Races, not the Meetings.
         /RaceDay/Meeting[@MeetingType="R"]|//Race
    -->
    <string name="races_runners_parse_path">/RaceDay/Meeting/Race|//Runner</string>

    <string name="country_file">database/country.xml</string>
    <string name="country_path">/Countries/Country</string>

    <!-- Toast text -->
    <string name="back_press_text">Press back again to exit.</string>

    <!-- Splash messages. -->
    <string name="splash_message">Getting things ready.</string>
    <string name="splash_main_fail">Main page download failure.</string>
    <string name="splash_other_fail">Race page download failure.</string>

    <!-- Retry message. -->
    <string name="parse_retry_message">Parsing failure. Select Retry</string>

    <!-- SplashFragment button label.  -->
    <string name="btn_lbl_retry">Retry</string>

    <!-- Menu labels. -->
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_summary">Summary</string>
    <string name="lbl_home">Home</string>

    <!-- Dialog labels/text. -->
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_delete_all">Refresh All Data</string>
    <string name="refresh_msg_l1">This will delete all existing data and</string>
    <string name="refresh_msg_l2">recreate from new file downloads.</string>
    <string name="tag_refresh_dialog">TagRefreshDialog</string>

    <!-- RacesFragment labels. -->
    <string name="tv_lbl_meeting_code">Meeting Code: </string>
    <string name="tv_lbl_weather">Weather: </string>
    <string name="tv_lbl_track">Track: </string>
    <string name="tv_lbl_venue_name">Venue: </string>

    <!-- SummaryFragment labels/text.-->
    <string name="nothing_to_display">Nothing to display.</string>

    <!-- SettingsFragment labels/text. -->
    <string name="settings_is_tba">Settings is TBA.</string>

    <!-- Keys. -->
    <string name="key_file_name">key_file_name</string>
    <string name="key_result_failure">key_result_failure</string>
    <!--    <string name="key_use_cache">key_use_cache</string>-->
    <string name="key_meeting_type">key_list_meeting_codes</string>
    <string name="key_meeting_id">key_meeting_id</string>
    <string name="key_broadcast_message">key_broadcast_message</string>

    <!-- Expanded recyclerview item textview labels. -->
    <string name="lbl_abandoned">Abandoned</string>
    <string name="lbl_races">Races</string>
    <string name="tv_lbl_race_no">Race:</string>
    <string name="tv_lbl_race_name">Name:</string>

    <!-- Notification (channel). -->
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notification channel description.</string>

</resources>