<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.MainFragment">

    <item android:id="@+id/id_mnu_bnv_refresh"
        android:icon="@drawable/state_nav_item_refresh_select"
        android:title="@string/lbl_refresh"/>

    <item android:id="@+id/id_mnu_bnv_settings"
        android:icon="@drawable/state_nav_item_settings_select"
        android:title="@string/lbl_settings"/>

    <item android:id="@+id/id_mnu_bnv_summary"
        android:icon="@drawable/state_nav_item_summary_select"
        android:title="@string/lbl_summary"/>

    <item android:id="@+id/id_mnu_bnv_home"
        android:icon="@drawable/state_nav_item_home_select"
        android:title="@string/lbl_home"/>

</menu>
